<resources>
    <string name="app_name">耐耐资讯</string>
    <string name="register">注册</string> <!--头部名称-->
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="input_username">请输入用户名</string>
    <string name="phone_number">手机号</string>
    <string name="input_iphone">请输入手机号</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="i_agree">我已阅读并同意</string>
    <string name="agreement">《用户注册协议》</string>
    <string name="verification">验证码</string>
    <string name="input_verification_code">输入手机验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="ok">确定</string>
    <string name="account">用户名</string>
    <string name="input_account">请输入用户名或手机号</string>
    <string name="free_retiger">免费注册</string>
    <string name="forget_password">忘记密码</string>

    <string name="personalcenter">个人中心</string>
    <string name="wodedingdan">我的订单</string>
    <string name="history">浏览历史</string>
    <string name="accountsafe">账户安全</string>
    <string name="wodeguanzhu">我的收藏</string>
    <string name="myjifen">我的积分</string>
    <string name="address">管理收获地址</string>
    <string name="about">关于我们</string>
    <string name="suggest">意见反馈</string>
    <string name="cleandata">清理缓存</string>
    <string name="help">帮助中心</string>
    <string name="version">版本检测</string>
    <string name="restPass">修改密码</string>
    <string name="modify">保存</string>

    <string name="old_pass">原密码：</string>
    <string name="new_pass">新密码</string>
    <string name="again_pass">确认密码</string>
    <string name="input_old_pass">请输入原密码</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="input_again_pass">请再次输入密码</string>
</resources>
