<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/relativelayout_login_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white" >

            <RelativeLayout
                android:id="@+id/relativelayout_login_back"
                android:layout_width="38dp"
                android:layout_height="48dp" >

                <TextView
                    android:id="@+id/textview_login_back"
                    android:layout_width="8dp"
                    android:layout_height="13dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/back" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textSize="19sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearlayout_login_center"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_below="@id/relativelayout_login_top"
            android:layout_marginTop="11dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textview_login_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:text="@string/account"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edittext_login_inputaccount"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_account"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/graytext" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textview_login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:text="@string/password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edittext_login_inputpassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_login_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/linearlayout_login_center"
            android:layout_marginTop="25dp" >

            <TextView
                android:id="@+id/textview_login_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/loginbackgroundpic"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativelayout_login_login"
            android:layout_marginTop="17dp" >

            <TextView
                android:id="@+id/textview_login_freeresiger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:padding="5dp"
                android:text="@string/free_retiger"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textview_login_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="14dp"
                android:padding="5dp"
                android:text="@string/forget_password"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>